# stitchify

./: Cargo.toml  README.md  stitchify.py
src/: config.rs  dimensions.rs  fabric.rs  fabric_svg.rs  gauge.rs  main.rs  mitre.rs  mitre_image.rs  sampler.rs  stitch_image.rs
