[package]
name = "stitchify"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A utility to generate intarsia knitting patterns"
repository = "https://github.com/bpeel/stitchify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
simple-xml-builder = "1.1.0"
